# rules_pyvenv

./: MODULE.bazel  build_env.py
example/: MODULE.bazel
